lib/src/macos.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:window_toolbox/macos')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_remove_titlebar(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<cw_rect_t>, ffi.Size)
>()
external void cw_nswindow_update_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<cw_rect_t> exclude,
  int exclude_count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_disable_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<cw_traffic_light_config_t>,
  )
>()
external void cw_nswindow_update_traffic_light(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<cw_traffic_light_config_t> config,
);

@ffi.Native<cw_size_t Function(ffi.Pointer<ffi.Void>)>()
external cw_size_t cw_nswindow_traffic_light_size(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_request_close(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedLong)>()
external void cw_nswindow_set_style_mask(
  ffi.Pointer<ffi.Void> ns_window,
  int style_mask,
);

@ffi.Native<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>()
external int cw_nswindow_get_style_mask(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedLong)>()
external void cw_nswindow_set_collection_behavior(
  ffi.Pointer<ffi.Void> ns_window,
  int collection_behavior,
);

@ffi.Native<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>()
external int cw_nswindow_get_collection_behavior(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_delegate_config_t)>()
external void cw_nswindow_init_delegate(
  ffi.Pointer<ffi.Void> ns_window,
  cw_delegate_config_t config,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_rect_t)>()
external void cw_nswindow_set_frame(
  ffi.Pointer<ffi.Void> ns_window,
  cw_rect_t frame,
);

@ffi.Native<cw_rect_t Function(ffi.Pointer<ffi.Void>)>()
external cw_rect_t cw_nswindow_get_frame(
  ffi.Pointer<ffi.Void> ns_window,
);

final class cw_rect_t extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

final class cw_size_t extends ffi.Struct {
  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

enum cw_appearance_t {
  CW_APPEARANCE_AUTO(0),
  CW_APPEARANCE_LIGHT(1),
  CW_APPEARANCE_DARK(2);

  final int value;
  const cw_appearance_t(this.value);

  static cw_appearance_t fromValue(int value) => switch (value) {
    0 => CW_APPEARANCE_AUTO,
    1 => CW_APPEARANCE_LIGHT,
    2 => CW_APPEARANCE_DARK,
    _ => throw ArgumentError('Unknown value for cw_appearance_t: $value'),
  };
}

final class cw_traffic_light_config_t extends ffi.Struct {
  @ffi.Double()
  external double offset_x;

  @ffi.Double()
  external double offset_y;

  @ffi.UnsignedInt()
  external int appearanceAsInt;

  cw_appearance_t get appearance => cw_appearance_t.fromValue(appearanceAsInt);

  @ffi.Bool()
  external bool custom_inactive_traffic_light;

  @ffi.Int64()
  external int inactive_background_color;

  @ffi.Int64()
  external int inactive_border_color;

  @ffi.Double()
  external double inactive_border_width;

  @ffi.Bool()
  external bool show_as_inactive_in_key_window;
}

final class cw_delegate_config_t extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<cw_size_t Function(cw_size_t new_size)>
  >
  on_window_will_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_start_live_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_end_live_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_close;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_exit_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_exit_fullscreen;

  external ffi.Pointer<
    ffi.NativeFunction<cw_rect_t Function(cw_rect_t default_frame)>
  >
  on_window_will_use_standard_frame;
}
